add: card structure

--- a/views/index.njk
+++ b/views/index.njk
@@ -5,7 +5,7 @@
     <section id="info-wrapper">
         <div class="container">
             <div class="info-content">
-                <h3>As melhores receitas</h3>
+                <h1>As melhores receitas</h1>
                 <p>Aprenda a construir os melhores pratos
                     com receitas criadas por profissionais
                     do mundo inteiro.
@@ -15,6 +15,18 @@
                 <img src="assets/chef.png" alt="Chefe">
             </div>
         </div>
+    </section>
+
+    <h1>Mais acessadas</h1>
+    <section id="cards">
+      <div class="card">
+          <img src="assets/burger.png" alt="">
+          <div class="info-content">
+            <h3>Triplo bacon burguer</h3>
+            <p>por Jorge Relato</p>       
+          </div>
+      </div>
+        
     </section>
 
 {% endblock %}
