--- a/public/style.css
+++ b/public/style.css
@@ -71,7 +71,7 @@ header{
     width: 320px;
 }
 
-.info-content h3{
+.info-content h1{
     font-size: 32px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -82,4 +82,8 @@ header{
     font-size: 18px;
     line-height: 27px;
     margin-bottom: 50px;
+}
+
+.info-img{
+    margin-bottom: 0;
 }
