--- a/views/index.njk
+++ b/views/index.njk
@@ -17,11 +17,47 @@
         </div>
     </section>
 
-    <h1>Mais acessadas</h1>
+    <h1 class="card-title">Mais acessadas</h1>
+
     <section id="cards">
       <div class="card">
           <img src="assets/burger.png" alt="">
-          <div class="info-content">
+          <div class="info-card">
+            <h3>Triplo bacon burguer</h3>
+            <p>por Jorge Relato</p>       
+          </div>
+      </div>
+      <div class="card">
+          <img src="assets/burger.png" alt="">
+          <div class="info-card">
+            <h3>Triplo bacon burguer</h3>
+            <p>por Jorge Relato</p>       
+          </div>
+      </div>
+      <div class="card">
+          <img src="assets/burger.png" alt="">
+          <div class="info-card">
+            <h3>Triplo bacon burguer</h3>
+            <p>por Jorge Relato</p>       
+          </div>
+      </div>
+      <div class="card">
+          <img src="assets/burger.png" alt="">
+          <div class="info-card">
+            <h3>Triplo bacon burguer</h3>
+            <p>por Jorge Relato</p>       
+          </div>
+      </div>
+      <div class="card">
+          <img src="assets/burger.png" alt="">
+          <div class="info-card">
+            <h3>Triplo bacon burguer</h3>
+            <p>por Jorge Relato</p>       
+          </div>
+      </div>
+      <div class="card">
+          <img src="assets/burger.png" alt="">
+          <div class="info-card">
             <h3>Triplo bacon burguer</h3>
             <p>por Jorge Relato</p>       
           </div>
