add: footer on layout

--- a/public/style.css
+++ b/public/style.css
@@ -7,9 +7,13 @@
 }
 
 body{
+    max-width: 100vw;
+    font-family: 'Roboto', sans-serif;
+}
+
+#content{
     max-width: 940px;
     margin: 0 auto;
-    font-family: 'Roboto', sans-serif;
 }
 
 header{
@@ -18,6 +22,19 @@ header{
     width: 100%;
     margin-top: 30px;
    
+}
+
+footer{
+    background-color: #EEEEEE;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 400;
+    color: #999999;
+
+    margin-top: 70px;
+
+    padding: 10px 30px;
+    
 }
 
 .logo{
