--- a/public/style.css
+++ b/public/style.css
@@ -7,8 +7,9 @@
 }
 
 body{
-    max-width: 100vw;
+    max-width: 100%;
     font-family: 'Roboto', sans-serif;
+    position: relative;
 }
 
 #content{
@@ -21,7 +22,6 @@ header{
     align-items: center;
     width: 100%;
     margin-top: 30px;
-   
 }
 
 footer{
@@ -33,7 +33,7 @@ footer{
 
     margin-top: 70px;
 
-    padding: 10px 30px;
+    padding: 20px 30px;
     
 }
 
@@ -121,6 +121,7 @@ footer{
 }
 
 .card{
+    cursor: pointer;
     margin-top: 20px;
 }
 .card img{
@@ -142,4 +143,64 @@ footer{
 .info-card p{
     font-size: 14px;
     line-height: 21px;
+}
+
+#modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(23, 23, 23, 0.4);
+   
+
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+
+    visibility: hidden;
+    
+}
+
+#modal .active{
+    visibility: visible;
+}
+
+.modal-content{
+    background-color: #FFFFFF;
+    text-align: center;
+
+    border-radius: 16px;
+    padding: 30px;
+    
+    width: 660px;
+}
+
+
+.modal-content img{
+    border-radius: 15px;
+    width: 660px;
+    height: 200px;
+
+    margin-bottom: 10px;
+}
+
+.modal-content h3{
+    font-size: 24px;
+    line-height: 36px;
+    font-weight: 400;
+    color: #111111;   
+}
+
+.modal-content p{
+    font-size: 18px;
+    line-height: 27px;
+    color: #777777;
+    margin-bottom: 30px;
+}
+
+.modal-content a{
+    font-size: 16px;
+    color: #999999;
+
+    text-decoration: none;
 }
