--- a/views/index.njk
+++ b/views/index.njk
@@ -33,7 +33,7 @@
 
 {% endblock %}
 
-{% block modal %}}
+{% block modal %}
   <section id="modal">
       <div class="modal-content">
         <div class="recipe">
