--- a/views/layout.njk
+++ b/views/layout.njk
@@ -9,11 +9,11 @@
     {% block modal %} {% endblock %}
     <section id="content">
         <header>
-            <img class="logo" src="assets/logo.png" alt="Logo">
+            <a href="/"><img class="logo" src="assets/logo.png" alt="Logo"></a>
             <div class="nav-bar">
                 <ul>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Receitas</a></li>
+                    <li><a href="/about">Sobre</a></li>
+                    <li><a href="">Receitas</a></li>
                 </ul>
             </div>
         </header>
