add: modal on recipes page

--- a/views/layout.njk
+++ b/views/layout.njk
@@ -9,7 +9,7 @@
     {% block modal %} {% endblock %}
     <section id="content">
         <header>
-            <img class="logo" src="assets/logo.png" alt="Logo">
+           <a href="/"><img class="logo" src="assets/logo.png" alt="Logo"></a> 
             <div class="nav-bar">
                 <ul>
                     <li><a href="/about">Sobre</a></li>
