--- a/public/style.css
+++ b/public/style.css
@@ -10,11 +10,14 @@ body{
     max-width: 100%;
     font-family: 'Roboto', sans-serif;
     position: relative;
+    display: flex;
+    flex-direction: column;   
 }
 
 #content{
     max-width: 940px;
     margin: 0 auto;
+    
 }
 
 header{
@@ -116,8 +119,7 @@ footer{
 #cards{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-
-   
+    gap: 15px;
 }
 
 .card{
@@ -157,7 +159,7 @@ footer{
     position: absolute;
     width: 100%;
     height: 100%;
-    top: 0;
+    
 
    visibility: hidden;
     
